syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos";
option java_outer_classname = "ShareConsumerProto";
option java_multiple_files = true;

import "record_metadata_options.proto";

message ShareConsumer {
  required string account_id = 1;
  required string manager_user = 2;
  map<string, string> users = 3;
}

message ShareConsumerUnion {
  option (com.apple.foundationdb.record.record).usage = UNION;
  required ShareConsumer share_consumer = 1;
}